--- a/src/docs/css/index.css
+++ b/src/docs/css/index.css
@@ -70,8 +70,8 @@ main {
   flex-direction: row;
 }
 main .content {
-  width: calc(100% - 12em);
-  padding-left: 1.5em;
+  width: auto;
+  padding-left: 1em;
   overflow: hidden;
   text-align: justify;
   font-size: 1.2em;
@@ -79,13 +79,56 @@ main .content {
 
 aside {
   width: 13em;
+  min-width: 13em;
   height: 100vh;
+  background-color: #cacab7;
+  z-index: 10;
+}
+@media screen and (max-width: 600px) {
+  aside.holder {
+    width: 0;
+    min-width: 0;
+  }
+}
+aside .menu-button {
+  display: none;
+  position: fixed;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  left: 12em;
+  min-width: 3em;
+  width: 3em;
+  height: 3em;
+  border-radius: 0 0.5em 0.5em 0;
+  background-color: #d4d4c5;
+  cursor: pointer;
+  transition: 0.5s;
+  box-shadow: 5px 5px 5px 0px #00000050;
+}
+aside .menu-button span {
+  font-size: 2em;
+  color: #00a1d9;
+  display: flex;
+  margin-top: -0.1em;
+}
+@media screen and (max-width: 600px) {
+  aside .menu-button {
+    display: flex;
+  }
 }
 aside.float {
   position: fixed;
   box-shadow: inset -10px 0px 5px -5px #00000050;
   top: 0;
   overflow: auto;
+  transition: 0.5s;
+}
+@media screen and (max-width: 600px) {
+  aside.float {
+    box-shadow: 10px 0px 5px -5px #00000050;
+  }
 }
 aside div {
   margin: 1em 1em;
